@@ -132,6 +132,9 @@ Extensions
 Library
 -------
 
+- Issue #1512791: In setframerate() in the wave module, non-integral
+  frame rates are rounded to the nearest integer.
+
 - Issue #8797: urllib2 does a retry for Basic Authentication failure instead of
   falling into recursion.
 
